some changes except the eva
Signed-off-by: tekilaz1 <tselama18@gmail.com>

--- a/tekcalculator.css
+++ b/tekcalculator.css
@@ -1,5 +1,5 @@
 body {
-      background-color: rgb(35%,5%,40%);
+      background-color: rgb(25%,75%,20%);
 
     }
 *{
@@ -11,14 +11,14 @@ body {
   	position: relative;
 
          top: 5px;
-    	 background-color: rgba();
+    	 background-color: transparent;
          width: 400px;
          margin: auto;
          height: auto;
          padding: 10px;
 
 
-        animation-duration: 15s;
+        animation-duration: 20s;
 	    animation-timing-function: ease-out;
 	    animation-iteration-count: infinite;
 
@@ -45,8 +45,8 @@ body {
 	0%, 15% { left: -30%; opacity: 0; }
 	15%, 30% { left: -25%; opacity: 1; }
 	30%, 45% { left: -10%; opacity: 1; }
-	45%, 60% { left: 30%; opacity: 1; }
-	60%, 70% { left: -10%; opacity: 1; }
+	45%, 60% { left: 30%; opacity: 0; }
+	60%, 70% { left: -10%; opacity:0.5; }
   70%,85% { left: 20; opacity: 1; }
   85%, 100% { left: 40; opacity: 0; }
 }
@@ -82,7 +82,55 @@ input[type=button]{
     font-weight: bold;
     border-radius: 5px;
    }
-#del{
-	
+.navbar {
+  background-color: transparent;
+  overflow: hidden;
+}
 
-   }
+.navbar {
+  position: absolute;
+  display:inline;
+  float: left;
+  color: #f2f2f2;
+  text-align: left;
+  padding: 5px 80px;
+  margin-left: 620px;  
+  margin-top: 5px;
+  text-decoration: none;
+  font-size: 30px;
+  font-weight: bold;
+  word-spacing: 25px;
+
+}
+
+.navbar a:hover{
+  background-color:transparent;
+  color: white;
+}
+.navbar a.active{
+  background-color: #4CAF50;
+  color: white;
+}
+
+.about {
+       position: absolute;
+      border: solid; border-radius: 100; border: 15px;
+      padding: 40px;
+   font-weight: 900;
+    width: 200px;
+    height: 50px;
+  right: 20px;
+  margin-top: 300px;
+  margin-bottom:100px;
+
+}
+.home {
+  background-color: #8BAF50;
+  text-color: yellow;
+  text-align: left;
+  margin-left: 20px;
+  margin-top: 120px;
+  
+  
+  font-size: 40px;
+}
